# password-manager

./: README.md  datafile.json  datafile.txt  gui.py  main.py  password_generator.py  pyproject.toml  settings.py
